# Study-player

./: MainActivity.kt  README.md  build.gradle.kts  gradle.properties  metadata.json  settings.gradle.kts
.github/workflows/: android.yaml  android.yml
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  magtsync.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/: Bookmark.kt  Note.kt  StudentProfileStore.kt  Video.kt  VideoDao.kt  VideoDatabase.kt  VideoProgress.kt  VideoRepository.kt
app/src/main/java/com/example/ui/: StudyPlayerViewModel.kt
app/src/main/java/com/example/ui/admin/: AdminPanelScreen.kt
app/src/main/java/com/example/ui/home/: HomeScreen.kt
app/src/main/java/com/example/ui/player/: VideoPlayerScreen.kt
app/src/main/java/com/example/ui/registration/: RegistrationScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
gradle/: libs.versions.toml
